<resources>
    <string name="app_name">BakingTime</string>
    <string name="ingredients">Ingredients</string>
    <string name="err_message">Something went wrong)</string>
    <string name="appwidget_text">Baking Time</string>
    <string name="add_widget">Add widget</string>
    <string name="next_button_name">next</string>
    <string name="previous_button_name">previous</string>
</resources>
