<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="udacity.example.com.bakingtime.ui.MasterRecipeListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </android.support.v7.widget.RecyclerView>

</FrameLayout>